--- a/Views/Home/Perusahaan.cshtml
+++ b/Views/Home/Perusahaan.cshtml
@@ -1,17 +1,19 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Perusahaan";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<script src="~/Scripts/JsCrud/crud.js"></script>
+<div class="container">
+    <h2>CRUD</h2>
+    <form>
+        <div class="form-group">
+            <label for="namaBarang">Nama Perusahaan:</label>
+            <input type="text" class="form-control" id="nmPerusahaan" placeholder="nama Perusahaan" name="nmPerusahaan">
+        </div>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+        <button class="btn btn-default" type="submit" id="btnSimpan" onclick="fnInsertPer()">Simpan</button>
+    </form>
+
+</div>
